--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
     "@okta/okta-angular": "^1.2.1",
     "bootstrap": "^4.3.1",
     "glyphicons": "^0.2.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "ng-tether": "^0.1.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.2",
